--- a/index.html
+++ b/index.html
@@ -1,3 +1,38 @@
-<html>
-  <div>Does my hosting work?</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>My Redux Learnings!</title>
+    <link rel="stylesheet" href="/reset.css" />
+    <link rel="stylesheet" href="/style.css" />
+  </head>
+  <body>
+    <div class="header">
+      <div class="container">
+        <p>My Redux Notes</p>
+      </div>
+    </div>
+    <div class="main">
+      <div class="container">
+        <div class="category-menu">
+          <div class="label menu-item">'Vanilla' Redux:</div>
+          <a class="menu-item" href="/redux-basics">Redux Basics</a>
+          <a class="menu-item" href="/redux-how-to"
+            >Multiple Reducers & Async</a
+          >
+        </div>
+        <div class="category-menu">
+          <div class="label menu-item">React Redux:</div>
+          <a class="menu-item" href="/react-redux-basic">React Redux</a>
+          <a class="menu-item" href="/react-redux-how-to">React Redux</a>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="container">
+        <p>Matt Megarry</p>
+      </div>
+    </div>
+  </body>
 </html>
