Make CSS cleaner

--- a/index.html
+++ b/index.html
@@ -8,29 +8,34 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <div class="header">
-      <div class="container">
+    <div class="header-outer">
+      <div class="header">
         <p>My Redux Notes</p>
       </div>
     </div>
-    <div class="main">
-      <div class="container">
+    <div class="main-outer">
+      <div class="main">
         <div class="category-menu">
-          <div class="label menu-item">'Vanilla' Redux:</div>
+          <div class="label">'Vanilla' Redux:</div>
           <a class="menu-item" href="/redux-basics">Redux Basics</a>
           <a class="menu-item" href="/redux-how-to"
             >Multiple Reducers & Async</a
           >
         </div>
         <div class="category-menu">
-          <div class="label menu-item">React Redux:</div>
+          <div class="label">React Redux:</div>
           <a class="menu-item" href="/react-redux-basic">React Redux</a>
           <a class="menu-item" href="/react-redux-how-to">React Redux</a>
         </div>
       </div>
     </div>
-    <div class="footer">
-      <div class="container">
+    <div class="footer-outer">
+      <div class="footer">
+        <p>
+          Inpired by / taken from
+          <a href="https://github.com/gopinav/React-Redux-Tutorials">here.</a>
+          Thanks!
+        </p>
         <p>Matt Megarry</p>
       </div>
     </div>
